# fitness-tracker

./: .gitignore  prd.json  progress.txt  pyproject.toml  state.json
.adw/configs/: budgets.json  models.json
.claude/: settings.json
app/: __init__.py  db.py  exif.py  routes.py  schema.sql  vision.py
app/templates/: confirm.html  dashboard.html  edit.html  index.html  timeline.html
docs/changes/: GH-1.md  GH-3.md  GH-4.md  GH-5.md
observability/runs/GH-1/: iter01_implement.json  iter01_implement_output.md  iter01_implement_prompt.md  iter01_plan.json  iter01_plan_output.md  iter01_plan_prompt.md  iter01_review.json  iter01_review_output.md  iter01_review_prompt.md  iter01_test.json  iter01_test_output.md  iter01_test_prompt.md  iter02_document.json  iter02_document_output.md  iter02_document_prompt.md  iter02_implement.json  iter02_implement_output.md  iter02_implement_prompt.md  iter02_plan.json  iter02_plan_output.md  iter02_plan_prompt.md  iter02_review.json  iter02_review_output.md  iter02_review_prompt.md  iter02_test.json  iter02_test_output.md  iter02_test_prompt.md
tests/: conftest.py  test_app.py
